# catio

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.deb  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: dual-mode.yml  release.yml
deploy/test/: README.md  docker-compose.yml
docs/: catio-vs-dbx-gap-2026-06-22.md  db-engines-integration-PLAN.md  remote-file-edit-plan.md  server-mode-deployment.md
docs/specs/: web-server.md
docs/superpowers/plans/: 2026-06-07-catio-db-backend.md  2026-06-07-catio-ssh-backend.md  2026-06-07-catio-ui-shell.md  2026-06-08-catio-ssh-panels-real.md  2026-06-10-mongo-es-completion-pretty-agent-context.md  2026-06-10-mongo-es-query-console-and-unified-tabs.md  2026-06-11-jdbc-driver-bundling-and-ux.md
docs/superpowers/specs/: 2026-06-07-catio-db-backend-design.md  2026-06-07-catio-ssh-backend-design.md  2026-06-07-catio-ui-shell-design.md  2026-06-08-catio-ssh-panels-real-design.md  2026-06-10-mongo-es-completion-pretty-agent-context-design.md  2026-06-10-mongo-es-query-console-and-unified-tabs-design.md  2026-06-11-jdbc-driver-bundling-and-ux-design.md  2026-06-11-sql-editor-gutter-and-agent-table-context-design.md  2026-06-12-shell-history-completion-design.md  2026-06-14-multi-exec-broadcast-design.md  2026-06-14-multi-tab-per-connection-design.md  2026-06-16-auto-scan-discovery-design.md
public/logos/os/: NOTICE.md
ref-ui/: Catio (standalone).html
scripts/: build-deb-arm64.sh  build-jdbc-plugin.ps1  diff.mjs  extract-assets.mjs  gen-redis-command-table.mjs  shoot.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/jdbc-plugin/: README.md  pom.xml
src-tauri/jdbc-plugin/src/main/java/app/catio/jdbc/: CatioJdbcPlugin.java
src-tauri/src/: auth.rs  diagnostics.rs  events.rs  lib.rs  localterm.rs  main.rs  mcp.rs  netmatch.rs  rdp.rs  secrets.rs  server.rs  server_main.rs  server_mcp.rs  server_ws.rs  vnc.rs  vncconn.rs
src-tauri/src/db/: capabilities.rs  commands.rs  db_admin_sql.rs  dialect.rs  dml.rs  driver.rs  export.rs  history.rs  ids.rs  manager.rs  mod.rs  object_source_sql.rs  query_explain_sql.rs  result.rs  sql_file.rs  table_import.rs  transfer.rs  xlsx_export.rs
src-tauri/src/db/drivers/: clickhouse.rs  duckdb.rs  elasticsearch.rs  es_query.rs  http.rs  jdbc.rs  jdbc_config.rs  mod.rs  mongo.rs  mongo_shell.rs  mysql.rs  postgres.rs  redis.rs  redis_command.rs  redis_connect.rs  rqlite.rs  sqlite.rs  sqlserver.rs
src-tauri/src/mcp/: core.rs  mod.rs
src-tauri/src/scan/: commands.rs  mod.rs  probe.rs  range.rs
src-tauri/src/ssh/: conn.rs  ids.rs  import.rs  knownhosts.rs  manager.rs  mod.rs  monitor.rs  multiexec.rs  osc.rs  parse.rs  sftp.rs  sftp_transfer.rs  shell_integration.rs  term.rs  tunnel.rs
src-tauri/tests/: db_clickhouse.rs  db_dml_roundtrip.rs  db_duckdb.rs  db_elasticsearch.rs  db_jdbc_download.rs  db_jdbc_engines.rs  db_jdbc_h2.rs  db_mongo.rs  db_mysql.rs  db_postgres.rs  db_redis.rs  db_rqlite.rs  db_sqlite.rs  db_sqlserver.rs  server_auth.rs  server_db.rs  server_isolation.rs  server_mcp.rs  server_secrets.rs  server_sftp.rs  server_tunnel.rs  server_ws.rs  sftp_backend.rs  sftp_transfer.rs  ssh_conn.rs  ssh_manager.rs  ssh_monitor.rs  ssh_multiexec.rs  ssh_proxyjump.rs  ssh_sftp.rs  ssh_sysinfo.rs  ssh_term.rs  ssh_tunnel.rs
src-tauri/tests/common/: test_server.rs
src-tauri/tests/fixtures/: id_test  id_test.pub
src/components/: BrandMark.tsx  Icon.tsx  atoms.tsx
src/components/auth/: AuthGate.tsx  ServerAccountBlock.tsx  ServerAuthGate.test.tsx  ServerAuthGate.tsx  index.ts
src/components/dbviews/: CreateObjectModal.tsx  DataGrid.test.tsx  DataGrid.tsx  DataTransferDialog.test.tsx  DataTransferDialog.tsx  DatabaseExportDialog.test.tsx  DatabaseExportDialog.tsx  ERDiagram.tsx  ExplainPlanViewer.test.tsx  ExplainPlanViewer.tsx  ObjectAdminModal.test.tsx  ObjectAdminModal.tsx  RedisKeyspaceView.test.tsx  RedisKeyspaceView.tsx  SqlConsole.test.tsx  SqlConsole.tsx  SqlEditor.test.tsx  SqlEditor.tsx  SqlFileDialog.tsx  StructureView.test.tsx  StructureView.tsx  TableImportDialog.test.tsx  TableImportDialog.tsx  clauseComplete.test.ts  clauseComplete.ts  columnVisibility.test.ts  columnVisibility.ts  copySql.test.ts  copySql.ts  dataTransfer.ts  (+40 more)
src/i18n/: en.json  index.ts  zh.json
src/services/: agent.test.ts  agent.ts  agentPrompt.test.ts  agentPrompt.ts  agentTerminalSplit.test.ts  agentTerminalSplit.ts  aiSkills.test.ts  aiSkills.ts  aiSqlExecutionPolicy.test.ts  aiSqlExecutionPolicy.ts  auth.ts  clipboard.ts  configSync.test.ts  configSync.ts  connectionImport.test.ts  connectionImport.ts  db.test.ts  db.ts  dbEngines.test.ts  dbEngines.ts  diagnostics.test.ts  diagnostics.ts  index.ts  jdbcDrivers.ts  logos.test.ts  logos.ts  mcp.ts  mockData.ts  models.ts  scan.ts  secrets.ts  ssh.test.ts  ssh.ts  termBuffers.ts  terminalCapture.test.ts  terminalCapture.ts  transport.test.ts  transport.ts  transport.ws.test.ts  types.ts  (+1 more)
src/state/: DataContext.tsx  LanguageContext.tsx  ThemeContext.tsx  agentConfig.test.ts  agentConfig.ts  connectionFavorites.test.ts  connectionFavorites.ts  connections.test.ts  connections.ts  conversations.test.ts  conversations.ts  dbConnections.test.ts  dbConnections.ts  groups.test.ts  groups.ts  history.test.ts  history.ts  preferences.ts  rdpConnections.ts  recentSessions.ts  schemaFilter.test.ts  schemaFilter.ts  sessionSecrets.ts  sftpFavorites.ts  sftpNav.ts  snippets.test.ts  snippets.ts  tabPersistence.test.ts  tabPersistence.ts  transfers.ts  tunnelConnections.ts  useTweaks.ts  vault.ts  vncConnections.ts
src/styles/: scrollbars.test.js  tokens.css
tests/: app.test.tsx  atoms.test.tsx  auth.test.tsx  dbviews.test.tsx  highlightSQL.test.ts  i18n.test.ts  icon.test.tsx  mockData.test.ts  models.test.ts  panels.test.tsx  services.test.ts  sidebarTree.test.ts  theme.test.ts  views.test.tsx  workbench.test.tsx
(+85 files in other folders)
