[package]
name = "catio"
version = "0.1.0"
edition = "2021"

[lib]
name = "catio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "catio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"
thiserror = "2.0.18"
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
async-trait = "0.1.89"
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.14.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
rand = "0.10.1"
tempfile = "3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
