[package]
name = "catio"
version = "0.4.0"
edition = "2021"

[lib]
name = "catio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "catio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"
thiserror = "2.0.18"
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
tauri-plugin-dialog = "2.7.1"
rand = "0.10.1"
async-trait = "0.1.89"
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.14.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "1"
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls-ring", "chrono", "rust_decimal"] }
futures-util = "0.3.32"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
rust_decimal = { version = "1.42.0", features = ["db-tokio-postgres"] }
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "column_decltype"] }
duckdb = { version = "1.3", features = ["bundled"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
mongodb = "3.7.0"
redis = { version = "1.2.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "cluster-async", "sentinel"] }
ipnet = "2.11"
csv = "1.3"
calamine = "0.30.1"
zip = { version = "2", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
