[package]
name = "catio"
version = "0.6.2"
edition = "2021"
default-run = "catio"

[lib]
name = "catio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "catio"
path = "src/main.rs"

# Web-server head (Option B spike): serves the built UI + exposes the same Rust core over
# HTTP/WS for LAN browser access. Reuses catio_lib; does not affect the desktop binary.
# required-features 让它默认不参与构建:桌面 `tauri build`(尤其 universal 打包)不会枚举/
# lipo 这个二进制,避免「universal 目录缺 catio-server 导致 bundle 失败」。服务端/Docker
# 构建显式加 `--features server` 即可。
# 源文件放在 src/ 下而非 src/bin/:tauri-bundler 的 get_binaries() 第二阶段会磁盘
# 扫描 src/bin/ 目录、按文件名重新登记二进制却忽略 required-features(tauri#15325),
# 导致 macOS universal 打包时误去拷贝未构建的 server 产物而失败。移出 src/bin/ 后
# 该磁盘扫描扫不到它,仅靠下面的 required-features 门控,桌面构建不再受牵连。
[[bin]]
name = "catio-server"
path = "src/server_main.rs"
required-features = ["server"]

[features]
# 仅用于开启 catio-server 二进制的构建;不改变 lib 行为。
server = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"
thiserror = "2.0.18"
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
rand = "0.10.1"
async-trait = "0.1.89"
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.14.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "1"
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls-ring", "chrono", "rust_decimal"] }
futures-util = "0.3.32"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
rust_decimal = { version = "1.42.0", features = ["db-tokio-postgres"] }
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "column_decltype"] }
duckdb = { version = "1.3", features = ["bundled"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "chrono", "rust_decimal", "rustls"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
mongodb = "3.7.0"
redis = { version = "1.2.2", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "cluster-async", "sentinel"] }
ipnet = "2.11"
csv = "1.3"
calamine = "0.30.1"
zip = { version = "2", default-features = false }
portable-pty = "0.8"
serialport = "4"
des = "0.8"
# Web-head auth (M2): argon2 password hashing for the user table. Desktop binary doesn't use it.
argon2 = "0.5"
# Server-side secret vault (web head): AES-256-GCM (+ SHA-256 key derivation) over CATIO_MASTER_KEY
# to encrypt connection passwords at rest in SQLite. ring is already in the tree (russh/rustls).
ring = "0.17"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
base64 = "0.22.1"
tempfile = "3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "cookies", "multipart"] }
# WebSocket client for the /ws integration tests (M3).
tokio-tungstenite = "0.24"
futures-util = "0.3"
